# learn_fastapi

./: .env.example  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/versions/: 1119930645a1_create_user.py  fd35b7b9e946_create_book.py
src/: config.py  containers.py  database.py  dependency.py  main.py  utils.py
src/models/: book.py  bookrequest.py  user.py
src/models/requests/: book_request.py  login_request.py  register_request.py
src/models/responses/: register_response.py
src/routers/: auth.py  book.py
